@@ -1,3 +1,8 @@
+2008-04-08  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * src/ccm-screen.c:
+    * src/ccm-window.c: Fix stacking some layer stacking.
+
 2008-04-07  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * src/ccm-screen.c: Fix window stacking in DESKTOP layer and window in
